<resources>
    <string name="app_name">Reverse Auction</string>

    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="don_t_have_an_account">don\'t have an account ? <b>Sign up.</b></string>
    <string name="already_have_an_account_login">Already have an account? <b>Login.</b></string>
    <string name="full_name">Full name</string>
    <string name="logout">Logout</string>
    <string name="sign_up">Sign up</string>
    <string name="phone">Phone</string>
    <string name="empty">can\'t be empty</string>
    <string name="email_not_valid">email is not valid</string>
    <string name="phone_not_valid">phone number is not valid</string>
    <string name="can_not_be_less_than_6">"password can\'t be less than 6 characters"</string>
    <string name="edit">Edit</string>
    <string name="oops_no_result_found">Oops! No result found</string>
    <string name="try_search_for_something_more_general_check_for_spelling_mistakes">Try search for something more general, check for spelling mistakes.</string>
    <string name="current_password">Current password</string>
    <string name="new_password">New password</string>
    <string name="edit_profile">Edit profile</string>
    <string name="are_you_sure_you_want_to_logout">Are you sure you want to logout?</string>
    <string name="cancel">Cancel</string>
    <string name="search">Search</string>


    <string name="credit_card_number">Credit card number</string>
    <string name="expiry_month">Expiry month</string>
    <string name="expiry_year">Expiry year</string>
    <string name="cvv">CVV</string>
    <string name="edit_credit_card">Edit credit card</string>
    <string name="card_error">card must be 16 number **** **** **** ****</string>
    <string name="send">Send</string>


    <string name="stars">******</string>
    <string name="stars_card_4">**** **** **** ****</string>
    <string name="expire">Expire</string>
    <string name="code">Code</string>
    <string name="stars_4">****</string>
    <string name="stars_2">**/**</string>
    <string name="there_are_no_payments_history_here_yet">There are no payments history here yet</string>
    <string name="zero">0</string>
    <string name="this_month">This Month</string>
    <string name="total">Total</string>
    <string name="today">Today</string>
    <string name="join_live_auctions_and_get_the_product_at_your_price_but_hurry_someone_else_might_buy_it_before_you_do">Join live auctions and Get the product at your price — but hurry, someone else might buy it before you do!</string>
    <string name="deals_don_t_wait_why_should_you">Deals Don’t Wait. Why Should You?</string>
    <string name="buyer">Buyer</string>
    <string name="seller">Seller</string>
    <string name="there_are_no_auctions_here_yet">There are no auctions here yet</string>
    <string name="kd">KD</string>
    <string name="notify_me">Notify Me</string>
    <string name="set_price_target">Set Price Target</string>
    <string name="add_auction">Add Auction</string>
    <string name="pick_image">Pick Image</string>
    <string name="title">Title</string>
    <string name="starting_price">Starting Price</string>
    <string name="min_price">Min Price</string>
    <string name="quantity">Quantity</string>
    <string name="starting_date_amp_time"><![CDATA[Starting Date & Time]]></string>
    <string name="unit">Unit</string>
    <string name="duration">Duration</string>
    <string name="create_auction">Create Auction</string>
    <string name="edit_auction">Edit Auction</string>
    <string name="description">Description</string>
    <string name="category">Category</string>
    <string name="categories">Categories</string>
    <string name="price_range">Price Range</string>
    <string name="upcoming_auctions">Upcoming Auctions</string>
    <string name="saved">Saved</string>
    <string name="view_more">View More</string>
    <string name="buy_now">Buy Now</string>
    <string name="_1">1</string>
    <string name="address">Address</string>
    <string name="type_address_here">Type Address Here</string>
    <string name="payment_info">Payment Info</string>
    <string name="credit_card_info">Credit Card Info</string>
    <string name="pay">Pay</string>
    <string name="set_your_price_target_and_we_ll_notify_you_when_the_price_drops_to_your_target">Set your price target and we\'ll notify you when the price drops to your target</string>
    <string name="buy_auction">Buy Auction</string>
    <string name="confirm">Confirm</string>
    <string name="price">Price</string>
    <string name="show_status">Show Status</string>
    <string name="click_for_details">•  Click for details</string>
    <string name="update_status">Update Status</string>
    <string name="update">Update</string>
    <string name="status">Status</string>

</resources>