<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.motion.widget.MotionLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/motionLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    app:layoutDescription="@xml/fragment_login_scene"
    tools:context=".ui.fragments.auth.AuthFragment">


    <com.google.android.material.card.MaterialCardView
        android:id="@+id/bg"
        style="@style/CustomCardViewStyle"
        android:layout_width="300dp"
        android:layout_height="400dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="32dp"
        app:cardBackgroundColor="@color/colorBackground"
        android:clipToPadding="false"
        app:cardElevation="8dp"
        app:strokeWidth="3dp"
        app:cardPreventCornerOverlap="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.imageview.ShapeableImageView
            style="@style/CustomCardViewStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scaleType="centerCrop"
            android:src="@drawable/login_background_img" />
    </com.google.android.material.card.MaterialCardView>

    <LinearLayout
        android:id="@+id/bottom_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/bg">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginHorizontal="24dp"
            android:layout_marginTop="32dp"
            android:gravity="center"
            android:text="@string/deals_don_t_wait_why_should_you"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginHorizontal="24dp"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:text="@string/join_live_auctions_and_get_the_product_at_your_price_but_hurry_someone_else_might_buy_it_before_you_do"
            android:textColor="@color/shimmer"
            android:textSize="16sp" />
    </LinearLayout>


    <ImageView
        android:id="@+id/login_logo_card"
        android:layout_width="wrap_content"
        android:layout_height="150dp"
        android:layout_marginTop="64dp"
        android:adjustViewBounds="true"
        android:elevation="8dp"
        android:src="@drawable/app_logo"
        android:transitionName="app_img"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/user_img"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:layout_marginTop="64dp"
        android:layout_marginBottom="24dp"
        android:src="@drawable/avatar"
        android:visibility="gone"
        app:civ_border_color="@color/white"
        app:civ_border_width="3dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login_logo_card" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/full_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="24dp"
        android:visibility="gone"
        app:boxBackgroundColor="@color/white"
        app:boxCornerRadiusBottomEnd="15dp"
        app:boxCornerRadiusBottomStart="15dp"
        app:boxCornerRadiusTopEnd="15dp"
        app:boxCornerRadiusTopStart="15dp"
        app:boxStrokeWidth="0dp"
        app:errorEnabled="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/user_img">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/full_name"
            android:inputType="textPersonName"
            android:textColor="@color/black"
            tools:text="@tools:sample/full_names" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/phone"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:visibility="gone"
        app:boxBackgroundColor="@color/white"
        app:boxCornerRadiusBottomEnd="15dp"
        app:boxCornerRadiusBottomStart="15dp"
        app:boxCornerRadiusTopEnd="15dp"
        app:boxCornerRadiusTopStart="15dp"
        app:boxStrokeWidth="0dp"
        app:errorEnabled="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/full_name">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/phone"
            android:inputType="phone"
            android:textColor="@color/black"
            tools:text="@tools:sample/full_names" />
    </com.google.android.material.textfield.TextInputLayout>

    <RadioGroup
        android:id="@+id/user_type"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:checkedButton="@id/buyer"
        android:background="@drawable/background_rounded"
        android:backgroundTint="@color/white"
        android:visibility="gone"
        android:alpha="0"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/phone">
        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="1"/>

        <RadioButton
            android:id="@+id/buyer"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:text="@string/buyer"
            android:checked="true"
            android:textColor="@color/black"
            android:textSize="16sp"
            />

        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="1"/>

        <RadioButton
            android:id="@+id/seller"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:text="@string/seller"
            android:textColor="@color/black"
            android:textSize="16sp"
            />
        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="1"/>
    </RadioGroup>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="36dp"
        app:boxBackgroundColor="@color/white"
        app:boxCornerRadiusBottomEnd="15dp"
        app:boxCornerRadiusBottomStart="15dp"
        app:boxCornerRadiusTopEnd="15dp"
        app:boxCornerRadiusTopStart="15dp"
        android:visibility="gone"
        app:boxStrokeWidth="0dp"
        app:errorEnabled="true"
        app:layout_constraintTop_toBottomOf="@id/user_type">

        <com.google.android.material.textfield.TextInputEditText
           android:id="@+id/email_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:textColor="#000"
            android:textSize="16sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        app:boxBackgroundColor="@color/white"
        app:boxCornerRadiusBottomEnd="15dp"
        app:boxCornerRadiusBottomStart="15dp"
        android:visibility="gone"
        app:boxCornerRadiusTopEnd="15dp"
        app:boxCornerRadiusTopStart="15dp"
        app:boxStrokeWidth="0dp"
        app:errorEnabled="true"
        app:layout_constraintTop_toBottomOf="@id/email"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textColor="#000"
            android:textSize="16sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/password"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:background="@drawable/background_rounded"
        android:elevation="0dp"
        android:gravity="center"
        android:text="@string/login"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        android:textStyle="bold"
        app:backgroundTint="@null"
        app:elevation="0dp"
        app:layout_constraintTop_toBottomOf="@id/password" />

    <View
        android:id="@+id/start_animation"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:elevation="6dp"
        app:layout_constraintBottom_toBottomOf="@id/login"
        app:layout_constraintEnd_toEndOf="@id/login"
        app:layout_constraintStart_toStartOf="@id/login"
        app:layout_constraintTop_toTopOf="@id/login" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/sign_up"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/password"
        android:layout_marginStart="16dp"
        android:background="@drawable/background_rounded"
        android:backgroundTint="@color/white"
        android:elevation="0dp"
        android:gravity="center"
        android:text="@string/sign_up"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:backgroundTint="@null"
        app:elevation="0dp"
        app:layout_constraintEnd_toStartOf="@id/center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/login" />

    <View
        android:id="@+id/start_signup_animation"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:elevation="6dp"
        app:layout_constraintBottom_toBottomOf="@id/sign_up"
        app:layout_constraintEnd_toEndOf="@id/sign_up"
        app:layout_constraintStart_toStartOf="@id/sign_up"
        app:layout_constraintTop_toTopOf="@id/sign_up" />

    <ProgressBar
        android:id="@+id/loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:elevation="8dp"
        android:indeterminateTint="@color/white"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@id/login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login_logo_card"
        tools:visibility="visible" />

    <View
        android:id="@+id/center"
        android:layout_width="16dp"
        android:layout_height="48dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.motion.widget.MotionLayout>