<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_margin="16dp"
    app:cardCornerRadius="35dp"
    app:cardElevation="8dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/title_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/set_price_target"
            android:textColor="@color/black"
            android:layout_marginTop="16dp"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/temp_line"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginTop="4dp"
            android:layout_marginHorizontal="16dp"
            android:background="#e7e7e7"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/title_text" />

        <TextView
            android:id="@+id/question"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginHorizontal="16dp"
            android:gravity="center"
            android:text="@string/set_your_price_target_and_we_ll_notify_you_when_the_price_drops_to_your_target"
            app:layout_constraintEnd_toEndOf="parent "
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/temp_line" />
       
        <LinearLayout
            android:id="@+id/price_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/question">

            <ImageView
                android:id="@+id/minus"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:layout_gravity="center"
                android:src="@drawable/ic_minus"
                app:tint="@color/black"/>

            <TextView
                android:id="@+id/price"
                android:layout_width="wrap_content"
                android:layout_height="36dp"
                android:layout_gravity="center"
                android:layout_marginHorizontal="24dp"
                android:background="@drawable/background_stroke"
                android:gravity="center"
                android:minWidth="74dp"
                android:paddingHorizontal="16dp"
                android:text="@string/kd"
                tools:text="1 KD"
                android:backgroundTint="@color/black"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <ImageView
                android:id="@+id/plus"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:layout_gravity="center"
                android:src="@drawable/ic_plus"
                app:tint="@color/black" />
        </LinearLayout>


        <com.google.android.material.button.MaterialButton
            android:id="@+id/notify_me"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="40dp"
            android:layout_marginVertical="16dp"
            android:background="@drawable/background_rounded"
            android:elevation="0dp"
            android:paddingVertical="0dp"
            android:text="@string/notify_me"
            android:textAllCaps="false"
            android:textColor="@color/white"
            app:backgroundTint="@color/black"
            app:cornerRadius="10dp"
            app:elevation="0dp"
            app:icon="@drawable/ic_notification_animation"
            app:iconGravity="textStart"
            app:iconSize="36dp"
            app:iconTintMode="src_atop"
            app:iconTint="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/price_layout" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>